--- a/src/app/admin/employee/add/add.component.html
+++ b/src/app/admin/employee/add/add.component.html
@@ -511,7 +511,7 @@
       <mat-card class="p-6 bg-white px-2 mx-3 my-3 " >
         <div class="p-2 clear-both">
          <div class="flex justify-between">
-          <h3>In this organization</h3>
+          <h3>Present organization</h3>
            </div>
           <form class="mutlifield" [formGroup]="shift">
                   <mat-card class="mb-3 nested-card">
