--- a/src/app/attendance/attendance/attendance.component.html
+++ b/src/app/attendance/attendance/attendance.component.html
@@ -45,7 +45,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="example-card p-3 h-40 relative">
+        <mat-card class="example-card p-3 h-40 relative" *ngIf="permissions?.manage ">
           <mat-card-content class="p-3">
             <div class="flex flex-col">
               <div><span>Manage  </span></div>
