--- a/src/app/branch/list/list.component.html
+++ b/src/app/branch/list/list.component.html
@@ -23,7 +23,7 @@
             </button>
           </mat-form-field>
         </div>
-        <div class="ml-7">
+        <div class="ml-7" *ngIf="permissions?.manage || permissions?.add">
           <button mat-raised-button color="primary" (click)="add()">
             Create branch
           </button>
@@ -84,10 +84,11 @@
               {{ element.email | titlecase }}
             </td>
           </ng-container>
-          <ng-container matColumnDef="actions">
+          <ng-container *ngIf="permissions?.manage || permissions?.delete || permissions?.update " matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element">
               <button
+              *ngIf="permissions?.manage || permissions?.update"
                 mat-icon-button
                 color="primary"
                 aria-label="Example icon button with a vertical three dot icon"
@@ -96,6 +97,7 @@
                 <mat-icon>edit</mat-icon>
               </button>
               <button
+              *ngIf="permissions?.manage || permissions?.delete"
                 mat-icon-button
                 color="primary"
                 aria-label="Example icon button with a home icon"
