--- a/src/app/documents/list/list.component.html
+++ b/src/app/documents/list/list.component.html
@@ -9,13 +9,11 @@
             <button class="mx-2" *ngIf="selected_id " mat-raised-button color="primary" (click)="getLetter()">
               Get document
             </button>
-            <button mat-raised-button color="primary" (click)="add()">
+            <button *ngIf="permissions?.manage || permissions?.add"  mat-raised-button color="primary" (click)="add()">
               Add document
             </button>
           </div>
         </div>
-
-
         <div style="margin: 15px" class="letter-container" >
       <no-data-found *ngIf="!documentList?.length"></no-data-found>
           <table *ngIf="documentList?.length"
@@ -24,24 +22,25 @@
             [dataSource]="documentList "
             class="mat-elevation-z8 "
           >
-          <ng-container class="right" matColumnDef="selectRadio">
-            <th mat-header-cell *matHeaderCellDef> </th>
-            <td mat-cell *matCellDef="let row" >
-              <mat-radio-group [(ngModel)]="row.selected" (change)="radioSelected(row)">
-                <mat-radio-button [value]="row"></mat-radio-button>
+          <ng-container  matColumnDef="selectRadio">
+            <th mat-header-cell class="radio" *matHeaderCellDef> </th>
+            <td mat-cell class="radio" *matCellDef="let row" >
+              <mat-radio-group [(ngModel)]="row.selected" name="check" (change)="radioSelected(row)">
+                <mat-radio-button [value]="row" name="check"></mat-radio-button>
             </mat-radio-group>
             </td>
           </ng-container>
-            <ng-container class="text-left"  matColumnDef="Lettertype">
-              <th mat-header-cell  *matHeaderCellDef>Letter name</th>
-              <td mat-cell  *matCellDef="let element">
-                {{element.letterName}}
+            <ng-container  matColumnDef="Lettertype">
+              <th mat-header-cell class="left"   *matHeaderCellDef>Letter name</th>
+              <td mat-cell class="left"  *matCellDef="let element">
+                {{element.letterName | titlecase}}
               </td>
             </ng-container>
-            <ng-container class="text-right" matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let element">
+            <ng-container *ngIf="permissions?.manage || permissions?.delete || permissions?.update" matColumnDef="actions">
+              <th mat-header-cell class="right" *matHeaderCellDef>Action</th>
+              <td mat-cell class="right" *matCellDef="let element">
                 <button
+                *ngIf="permissions?.manage ||permissions?.update" 
                   mat-icon-button
                   color="primary"
                   aria-label="Example icon button with a vertical three dot icon"
@@ -50,6 +49,7 @@
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button
+                *ngIf="permissions?.manage ||permissions?.delete" 
                   mat-icon-button
                   color="primary"
                   aria-label="Example icon button with a home icon"
