--- a/src/app/payroll/salary/listgrade/listgrade.component.html
+++ b/src/app/payroll/salary/listgrade/listgrade.component.html
@@ -23,7 +23,7 @@
               </button>
             </mat-form-field>
           </div>
-          <div class="ml-7">
+          <div class="ml-7" *ngIf="permissions?.manage || permissions?.add">
             <button mat-raised-button color="primary" (click)="add()">
               Create salary grade
             </button>
@@ -35,6 +35,7 @@
           style="margin: 15px"
           class="container-table "
         >
+       <pre>{{ permissions | json}}</pre> 
           <table mat-table [dataSource]="gradeList" class="mat-elevation-z8">
             <ng-container matColumnDef="grade">
               <th mat-header-cell *matHeaderCellDef>Grade</th>
@@ -58,10 +59,11 @@
               </td>
             </ng-container>
   
-            <ng-container matColumnDef="actions">
+            <ng-container *ngIf="permissions?.manage || permissions?.update || permissions?.delete" matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Action</th>
               <td mat-cell *matCellDef="let element">
                 <button
+                *ngIf="permissions?.manage || permissions?.update"
                   mat-icon-button
                   color="primary"
                   aria-label="Example icon button with a vertical three dot icon"
@@ -70,6 +72,7 @@
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button
+                *ngIf="permissions?.manage || permissions?.delete"
                   mat-icon-button
                   color="primary"
                   aria-label="Example icon button with a home icon"
