--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -33,13 +33,13 @@
       <th mat-header-cell *matHeaderCellDef> Department </th>
       <td mat-cell *matCellDef="let element"> {{element.departmentName | titlecase}} </td>
     </ng-container>
-    <ng-container matColumnDef="actions">
+    <ng-container *ngIf="permission?.manage || permission?.delete || permission?.update" matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Action </th>
       <td mat-cell *matCellDef="let element" > 
-        <button mat-icon-button color="primary" aria-label="Example icon button with a vertical three dot icon" (click)="$event.stopPropagation();action(element,'edit')">
+        <button *ngIf="permission?.manage || permission?.update" mat-icon-button color="primary" aria-label="Example icon button with a vertical three dot icon" (click)="$event.stopPropagation();action(element,'edit')">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="primary" aria-label="Example icon button with a home icon" (click)="$event.stopPropagation();action(element,'delete')">
+        <button *ngIf="permission?.manage || permission?.delete" mat-icon-button color="primary" aria-label="Example icon button with a home icon" (click)="$event.stopPropagation();action(element,'delete')">
           <mat-icon>delete_forever</mat-icon>
         </button>
       </td>
