--- a/src/app/shifts/lists/lists.component.html
+++ b/src/app/shifts/lists/lists.component.html
@@ -4,7 +4,7 @@
       </app-content-navbar>
   
       <div class="bg-gray-100">
-        <div class="flex justify-end m-4">
+        <div class="flex justify-end m-4" *ngIf="permissions?.manage || permissions?.add">
           <button mat-raised-button color="primary" (click)="add()">
           Create shifts
           </button>
@@ -42,10 +42,11 @@
                 {{ momentInstance(element.toTime, "HH:mm").format("hh:mm A") }}
               </td>
             </ng-container>
-            <ng-container matColumnDef="action" class="text-right">
+            <ng-container *ngIf="permissions?.manage || permissions?.delete || permissions?.update" matColumnDef="actions" class="text-right">
               <th mat-header-cell  *matHeaderCellDef>Action</th>
               <td mat-cell  *matCellDef="let element">
                 <button
+                *ngIf="permissions?.manage || permissions?.update"
                   mat-icon-button
                   color="primary"
                   aria-label="Example icon button with a vertical three dot icon"
@@ -54,6 +55,7 @@
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button
+                *ngIf="permissions?.manage || permissions?.delete"
                   mat-icon-button
                   color="primary"
                   aria-label="Example icon button with a home icon"
