--- a/src/app/attendance/manage-attendance/manage-attendance.component.html
+++ b/src/app/attendance/manage-attendance/manage-attendance.component.html
@@ -44,8 +44,8 @@
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element" style="width: 100px">
               <img
-                *ngIf="element.employee?.profile_photo"
-                src="{{ element.employee?.profile_photo }}"
+                *ngIf="element?.employee?.profile_photo"
+                src="{{ element?.employee?.profile_photo }}"
                 style="width: 40px; border-radius: 50%"
               />
               <img
@@ -61,9 +61,9 @@
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.employee.personalDetails[0].firstName | titlecase }}
-              {{ element.employee.personalDetails[0].middleName | titlecase }}
-              {{ element.employee.personalDetails[0].lastName | titlecase }}
+              {{ element.employee?.personalDetails[0]?.firstName | titlecase }}
+              {{ element.employee?.personalDetails[0]?.middleName | titlecase }}
+              {{ element.employee?.personalDetails[0]?.lastName | titlecase }}
             </td>
           </ng-container>
 
@@ -71,7 +71,7 @@
           <ng-container matColumnDef="mobile">
             <th mat-header-cell *matHeaderCellDef>Mobile</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.employee.personalDetails[0].ph_no  }}
+              {{ element.employee?.personalDetails[0]?.ph_no  }}
             </td>
           </ng-container>
 
@@ -79,13 +79,13 @@
           <ng-container matColumnDef="designation">
             <th mat-header-cell *matHeaderCellDef>Designation</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.employee.departmentDetails[0].designationName | titlecase }}
+              {{ element.employee?.departmentDetails[0]?.designationName | titlecase }}
             </td>
           </ng-container>
           <ng-container matColumnDef="department">
             <th mat-header-cell *matHeaderCellDef>Department</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.employee.departmentDetails[0].dept_name | titlecase }}
+              {{ element.employee?.departmentDetails[0]?.dept_name | titlecase }}
             </td>
           </ng-container>
           <ng-container matColumnDef="status">
