--- a/src/app/branch/list/list.component.html
+++ b/src/app/branch/list/list.component.html
@@ -40,48 +40,54 @@
           <ng-container matColumnDef="departmentId">
             <th mat-header-cell *matHeaderCellDef>Id</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.departmentId }}
+              {{ element?.departmentId }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="branchName">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.branchName | titlecase }}
+              {{ element?.branchName | titlecase }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="branchHead">
             <th mat-header-cell *matHeaderCellDef>Branch head</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.branchHead | titlecase }}
+              {{ element?.branchHead | titlecase }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="branchHR">
             <th mat-header-cell *matHeaderCellDef>Branch hr</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.branchHR | titlecase }}
+              {{ element?.branchHR | titlecase }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="branchAddress">
             <th mat-header-cell *matHeaderCellDef>Address</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.branchAddress | titlecase }}
+              {{ element?.branchAddress | titlecase }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="contactNumber">
             <th mat-header-cell *matHeaderCellDef>Contact no</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.contactNumber }}
+              {{ element?.contactNumber }}
             </td>
           </ng-container>
           <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef>Email</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.email | titlecase }}
+              {{ element?.email | titlecase }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element" [style.color]="element?.status =='active' ? 'green' :'red' ">
+              {{ element?.status =='active' ? 'Active': 'In active'}}
             </td>
           </ng-container>
           <ng-container *ngIf="permissions?.manage || permissions?.delete || permissions?.update " matColumnDef="actions">
