--- a/src/app/department/add/add.component.html
+++ b/src/app/department/add/add.component.html
@@ -10,7 +10,7 @@
           <form [formGroup]="department" *ngIf="showForm">
             <div class="flex">
               <div class="w-full">
-                <div class="grid lg:grid-cols-1 gap-4">
+                <div class="grid lg:grid-cols-2 gap-4">
                   <mat-form-field class="example-full-width">
                     <mat-label>Department name</mat-label>
                     <input
@@ -40,6 +40,15 @@
                       name="location"
                       formControlName="location"
                     />
+                  </mat-form-field>
+                  <mat-form-field>
+                    <mat-label>Status</mat-label>
+                    <mat-select  matNativeControl name="status" [value]="selected" formControlName="status">
+                      <mat-option *ngFor="let status of statuses" [value]="status?.value" >
+                        {{status?.label}}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error>Please Select department status.</mat-error>
                   </mat-form-field>
                 </div>
               </div>
