--- a/src/app/department/list/departments.component.html
+++ b/src/app/department/list/departments.component.html
@@ -56,6 +56,12 @@
               {{ element.departmentHead | titlecase }}
             </td>
           </ng-container>
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element" [style.color]="element?.status =='active' ? 'green' :'red' ">
+              {{ element?.status =='active' ? 'Active': 'In active'}}
+            </td>
+          </ng-container>
           <ng-container *ngIf="permissions?.manage || permissions?.delete || permissions?.update " matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element">
