--- a/src/app/designation/list/designation.component.html
+++ b/src/app/designation/list/designation.component.html
@@ -37,9 +37,15 @@
           class="mat-elevation-z8"
         >
           <ng-container matColumnDef="designationName">
-            <th mat-header-cell class="left" *matHeaderCellDef>Designation</th>
-            <td mat-cell class="left" *matCellDef="let element">
+            <th mat-header-cell  *matHeaderCellDef>Designation</th>
+            <td mat-cell  *matCellDef="let element">
               {{ element.designationName | titlecase }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element" [style.color]="element?.status =='active' ? 'green' :'red' ">
+              {{ element?.status =='active' ? 'Active': 'In active'}}
             </td>
           </ng-container>
 
