--- a/src/app/designation/list/designation.component.scss
+++ b/src/app/designation/list/designation.component.scss
@@ -10,15 +10,13 @@
 .mat-header-cell {
     color: #4050b5 !important;
     font-weight: 800;
+    text-align: left;
     border-bottom-width: 1px;
     border-bottom-color: #4050b5;
     border-bottom-style: solid;
 
   }
-  .mat-header-cell.left{
-    text-align: left;
-
-  }
+  
   .mat-header-cell.right{
     text-align: right;
 
@@ -28,9 +26,9 @@
         cursor: pointer;
       }
 .mat-cell{
-    text-align: right;
+    text-align: left;
 }
-.mat-cell.left{
-  text-align: left;
+.mat-cell.right{
+  text-align: right;
 }
 }
