--- a/src/app/financial-year/add/add.component.html
+++ b/src/app/financial-year/add/add.component.html
@@ -10,7 +10,7 @@
       <mat-card class="p-6 bg-white px-2 mx-3 my-3">
         <div class="p-2 clear-both">
           <form [formGroup]="financialYear">
-            <div class="grid lg:grid-cols-2 gap-4">
+            <div class="grid lg:grid-cols-3 gap-4">
               <mat-form-field class="example-full-width">
                 <mat-label>Financial year</mat-label>
                 <input numbersOnly  type="text"
@@ -23,7 +23,17 @@
               <mat-form-field>
                 <input matInput placeholder="Current year"  formControlName="currentYear" >
               </mat-form-field>
-            </div>
+
+              <mat-form-field>
+                <mat-label>Status</mat-label>
+                <mat-select  matNativeControl name="status" [value]="selected" formControlName="status">
+                  <mat-option *ngFor="let status of statuses" [value]="status?.value" >
+                    {{status?.label}}
+                  </mat-option>
+                </mat-select>
+                <mat-error>Please Select fianacial year status.</mat-error>
+              </mat-form-field>
+            </div>  
             <div class="flex justify-end">
               <button
                 mat-raised-button
