--- a/src/app/roles/add/add.component.html
+++ b/src/app/roles/add/add.component.html
@@ -66,27 +66,28 @@
                                 <tr *ngFor="let permission of fields" class="custom-row" >
                                     <td>{{permission | titlecase}}
                                         </td>
+                                        {{actions[permission] | json}}
                                         <td><section class="example-section">
-                                            <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions && actions[permission].view"></mat-checkbox>
+                                            <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions[permission].view"></mat-checkbox>
                                           </section>
                                         </td>
                                         <td><section class="example-section">
-                                            <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions &&  actions[permission].add"></mat-checkbox>
+                                            <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions[permission].add"></mat-checkbox>
                                           </section>
                                         </td>
                                         <td>
                                             <section class="example-section">
-                                                <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions &&  actions[permission].delete"></mat-checkbox>
+                                                <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions[permission].delete"></mat-checkbox>
                                               </section>
                                         </td>
                                         <td>
                                             <section class="example-section">
-                                                <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions &&  actions[permission].manage"></mat-checkbox>
+                                                <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions[permission].manage"></mat-checkbox>
                                               </section>
                                         </td>
                                         <td>
                                             <section class="example-section">
-                                                <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions &&  actions[permission].update"></mat-checkbox>
+                                                <mat-checkbox class="example-margin"  color="primary" [(ngModel)]="actions[permission].update"></mat-checkbox>
                                               </section>
                                         </td>
                                     </tr>
