--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -15,7 +15,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.firstName | titlecase}}  {{element.fatherName | titlecase}} {{element.lastName | titlecase}} </td>
+      <td mat-cell *matCellDef="let element"> {{element?.firstName | titlecase}}  {{element?.fatherName | titlecase}} {{element?.lastName | titlecase}} </td>
     </ng-container>
   
     <!-- Weight Column -->
@@ -27,11 +27,16 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="designation">
       <th mat-header-cell *matHeaderCellDef> Designation </th>
-      <td mat-cell *matCellDef="let element"> {{element.designationName | titlecase}} </td>
+      <td mat-cell *matCellDef="let element"> {{element?.designationName | titlecase}} </td>
     </ng-container>
     <ng-container matColumnDef="department">
       <th mat-header-cell *matHeaderCellDef> Department </th>
-      <td mat-cell *matCellDef="let element"> {{element.departmentName | titlecase}} </td>
+      <td mat-cell *matCellDef="let element"> {{element?.departmentName | titlecase}} </td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef > Status </th>
+      <td mat-cell *matCellDef="let element" [style.color]="element?.status =='active' ? 'green' : 'red'">
+         {{element?.status =='active' ? 'Active' :'In active'}} </td>
     </ng-container>
     <ng-container *ngIf="permission?.manage || permission?.delete || permission?.update" matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Action </th>
@@ -43,13 +48,14 @@
           <mat-icon>delete_forever</mat-icon>
         </button>
         
-        <mat-slide-toggle
+        <!-- <mat-slide-toggle
                 color="primary"
-                [(ngModel)]="element.false"
-                (change)="updateAttendance(element)"
+                [(ngModel)]="element.status"
+                (click)="$event.stopPropagation();"
                 
               ></mat-slide-toggle>
-      </td>
+
+      </td> -->
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="action(row,'view')"></tr>
